Renaming console to platform and adding core endpoints with mock data
