# src/handlers/getScore.ts
@@ -1,15 +1,20 @@
 import { Request, Response } from 'express';
+import { mockScores } from '../utils/mock';
 
 export async function getScore(req: Request, res: Response) {
+  const { id } = req.params;
+
+  if (!id) {
+    // Throw some error here...
+  }
+
+  const score = mockScores.find((s) => s.id === id);
+
+  if (!score?.id) {
+    return res.status(404).send();
+  }
+
   return res.status(200).send({
-    score: {
-      id: '123',
-      name: 'Game 1',
-      score: 80,
-      timeToComplete: '2 weeks',
-      finishDate: '2024-07-01T00:00:00',
-      playedConsoles: ['Switch'],
-      thoughts: 'Game was alright.',
-    },
+    score,
   });
 }
