# src/types.ts
@@ -1,14 +1,26 @@
-export interface IScoreToCreate {
+export type Platform = 'Switch' | 'Steam' | 'DS' | 'PS4' | 'Gameboy';
+
+export interface IScore {
+  id: string;
   name: string;
   score: number;
-  timeToComplete: string;
+  timeToComplete: number;
   finishDate: string;
-  playedConsoles: Console[];
-  thoughts: string;
+  playedPlatforms: Platform[];
+  thoughts: {
+    overview: string;
+    good: string;
+    bad: string;
+  };
 }
 
-export interface IScore extends IScoreToCreate {
+export interface IGenre {
   id: string;
+  name: string;
+  examples: { id: string; name: string }[];
 }
 
-export type Console = 'Switch' | 'PC' | 'SteamDeck' | 'DS' | 'PS4' | 'Gameboy';
+export interface IPlatform {
+  id: string;
+  name: Platform;
+}
